💄 Fix component intro text spacing

--- a/frontend21/scss/amp-dev.scss
+++ b/frontend21/scss/amp-dev.scss
@@ -72,6 +72,7 @@ h4 {
 }
 
 p {
+  max-width: 920px;
   font-size: 16px;
   line-height: 1.63;
   margin-top: 1.1em;
